fix error: coutry map was overlapin over the popup

--- a/src/styling/HomePage.css
+++ b/src/styling/HomePage.css
@@ -7,7 +7,6 @@
 
 .continent img {
     width: 45%;
-    position: relative;
 }
 
 .continent .cont-header{
